fix metamask close notification popup

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "jest-environment-node": "^27.1.1",
     "mocha": "7.2.0",
     "prettier": "^2.2.1",
-    "puppeteer": "5.5.0",
+    "puppeteer": "^14.1.1",
     "serve-handler": "5.0.8",
     "solc": "0.5.2",
     "ts-node": "9.1.1",
