--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "solc": "0.5.2",
     "ts-node": "10.8.1",
     "typescript": "^4.7",
-    "web3": "1.3.4"
+    "web3": "4.0.1-alpha.0"
   },
   "peerDependencies": {
     "puppeteer": ">13"
