--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@metamask/providers": "^9.1.0",
     "node-stream-zip": "^1.13.0",
     "p-event": "4.2.0",
-    "serve-handler": "5.0.8"
+    "serve-handler": "5.0.8",
+    "strict-event-emitter": "^0.2.8"
   },
   "devDependencies": {
     "@chainsafe/eslint-config": "^1.0.0",
