--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "resolveJsonModule": true
   },
   "files": ["./node_modules/@metamask/snap-types/global.d.ts"],
   "include": ["src/**/*", "test/**/*"]
