--- a/package.json
+++ b/package.json
@@ -70,8 +70,9 @@
     "web3": "1.3.4"
   },
   "peerDependencies": {
+    "playwright": ">=1",
     "puppeteer": ">13",
-    "playwright": ">=1"
+    "web3-utils": ">1"
   },
   "peerDependenciesMeta": {
     "soy-puppeteer": {
