--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "solc": "0.5.2",
     "ts-node": "10.8.1",
     "typescript": "^4.7",
-    "web3": "1.3.4"
+    "web3": "1.3.4",
+    "web3-utils": "^1.8.1"
   },
   "peerDependencies": {
     "playwright": ">=1",
-    "puppeteer": ">13",
-    "web3-utils": ">1"
+    "puppeteer": ">13"
   },
   "peerDependenciesMeta": {
     "soy-puppeteer": {
