--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "declaration": true,
     "esModuleInterop": true,
-    "outDir": "dist",
-    "resolveJsonModule": true
+    "outDir": "dist"
   },
   "files": ["./node_modules/@metamask/snap-types/global.d.ts"],
   "include": ["src/**/*", "test/**/*"]
