--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "ts-node": "10.8.1",
     "typescript": "^4.7",
     "web3": "1.3.4",
-    "web3-utils": "^1.8.1"
+    "web3-utils": "1.3.4"
   },
   "peerDependencies": {
     "playwright": ">=1",
