--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/ test/",
     "lint:fix": "yarn run lint --fix",
+    "test:userData": "USER_DATA_TEST=true mocha --bail --require ts-node/register",
+    "test:puppeteer:userData": "AUTOMATION=puppeteer yarn run test:userData",
+    "test:playwright:userData": "AUTOMATION=playwright yarn run test:userData",
     "test:mm": "mocha --bail --require ts-node/register --require test/global.ts",
     "test:flask": "mocha --bail --require ts-node/register --require test/global_flask.ts",
     "test:puppeteer:mm": "AUTOMATION=puppeteer yarn run test:mm",
