--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           name: debug_screenshots
           path: ./*.png
+      - name: Tests UserData
+        run: 'xvfb-run --auto-servernum --server-args="-screen 0, 1920x1080x24" yarn run test:${{matrix.automation}}:userData --timeout 240000'
   lint:
     name: Lint
     runs-on: ubuntu-latest
