--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
   maybe-release:
     name: release
     runs-on: ubuntu-latest
-    needs: [tests, lint, build]
+    needs: [tests, lint, build, tests-user-data]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: google-github-actions/release-please-action@v3 # it will analyze commits and create PR with new version and updated CHANGELOG:md file. On merging it will create github release page with changelog
