--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
   tests-user-data:
     name: Tests UserData
     runs-on: ubuntu-latest
+    needs: [tests]
     strategy:
       fail-fast: false
       matrix:
@@ -66,6 +67,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [lint]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
