--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:userData": "USER_DATA_TEST=true mocha --bail --require ts-node/register",
     "test:puppeteer:userData": "AUTOMATION=puppeteer yarn run test:userData",
     "test:playwright:userData": "AUTOMATION=playwright yarn run test:userData",
-    "test:mm": "mocha --bail --require ts-node/register --require test/global.ts --timeout=50000",
-    "test:flask": "mocha --bail --require ts-node/register --require test/global_flask.ts --timeout=50000",
+    "test:mm": "mocha --bail --require ts-node/register --require test/global.ts",
+    "test:flask": "mocha --bail --require ts-node/register --require test/global_flask.ts",
     "test:puppeteer:mm": "AUTOMATION=puppeteer yarn run test:mm",
     "test:puppeteer:flask": "AUTOMATION=puppeteer yarn run test:flask",
     "test:playwright:mm": "AUTOMATION=playwright yarn run test:mm",
