--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: 
+on:
   push:
     branches:
       - master
@@ -22,7 +22,9 @@ jobs:
         with:
           node-version: "16"
           cache: 'yarn'
-      - run: corepack enable
+
+      - name: Activate corepack
+        run: corepack enable
       - name: Install deps
         run: yarn --immutable
       - name: Build
@@ -62,14 +64,14 @@ jobs:
       - name: Lint
         run: yarn run lint
   tests:
-    needs: [build, download]
+    needs: [ build, download ]
     name: Tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        mm-version: [mm, flask]
-        automation: [playwright, puppeteer]
+        mm-version: [ mm, flask ]
+        automation: [ playwright, puppeteer ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -93,7 +95,7 @@ jobs:
   tests-user-data:
     name: Tests UserData
     runs-on: ubuntu-latest
-    needs: [tests, download]
+    needs: [ tests, download ]
     strategy:
       fail-fast: false
       matrix:
@@ -117,7 +119,7 @@ jobs:
   maybe-release:
     name: release
     runs-on: ubuntu-latest
-    needs: [tests, lint, build, tests-user-data]
+    needs: [ tests, lint, build, tests-user-data ]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: google-github-actions/release-please-action@v3 # it will analyze commits and create PR with new version and updated CHANGELOG:md file. On merging it will create github release page with changelog
@@ -126,10 +128,10 @@ jobs:
           release-type: node
           package-name: release-please-action
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":true}]'
-      
+
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
-        
+
       - uses: actions/setup-node@v3
         with:
           cache: 'yarn'
@@ -140,7 +142,7 @@ jobs:
       - run: corepack enable
       - run: yarn --immutable
         if: ${{ steps.release.outputs.release_created }}
-      
+
       - run: yarn build
         if: ${{ steps.release.outputs.release_created }}
 
