--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
+      - name: Activate corepack
+        run: corepack enable
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           cache: 'yarn'
           node-version: "20"
           registry-url: 'https://registry.npmjs.org'
-      - run: corepack enable
       - run: yarn --immutable
       - run: yarn build
       - name: "Retrieving package version"
