--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,8 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - run: corepack enable
+      - name: Activate corepack
+        run: corepack enable
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -74,6 +75,7 @@ jobs:
         mm-version: [ mm, flask ]
         automation: [ playwright, puppeteer ]
     steps:
+      - run: corepack enable
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -83,7 +85,6 @@ jobs:
         with:
           path: ${{env.METAMASK_CACHE_PATH}}
           key: metamask-extension
-      - run: corepack enable
       - name: Install
         run: yarn --immutable
       - name: Tests
@@ -134,8 +135,9 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created }}
 
-      - run: corepack enable
 
+      - name: Activate corepack
+        run: corepack enable
       - uses: actions/setup-node@v4
         with:
           cache: 'yarn'
