update yarn cache

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -20,13 +20,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           cache: yarn
-          node-version: "18"
+          node-version: "16"
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
 
-      - name: Cache yarn cache
+      - name: Cache yarn cache directory
         uses: actions/cache@v3
+        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
