--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+        run: echo "dir=$(yarn config get cacheFolder)" >> "$GITHUB_OUTPUT"
 
       - name: Cache yarn cache directory
         uses: actions/cache@v3
