--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "solc": "0.5.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.7",
-    "web3": "4.0.1-alpha.2",
-    "web3-eth-contract": "4.0.1-alpha.2"
+    "web3": "^4.5.0",
+    "web3-eth-contract": "^4.2.0"
   },
   "peerDependencies": {
     "playwright": ">=1.29",
