--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
+    "watch": "tsc -p tsconfig.build.json -w",
     "lint": "eslint --color --ext .ts src/ test/",
     "lint:fix": "yarn run lint --fix",
     "test:userData": "USER_DATA_TEST=true mocha --bail --require ts-node/register",
@@ -54,6 +55,9 @@
     "@metamask/providers": "^9.1.0",
     "fs-extra": "^11.1.0",
     "node-stream-zip": "^1.13.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "serve-handler": "5.0.8",
     "strict-event-emitter": "^0.2.8"
   },
@@ -78,7 +82,7 @@
     "mocha": "^10.2.0",
     "playwright": "^1.29.2",
     "prettier": "^2.2.1",
-    "puppeteer": "19.6.3",
+    "puppeteer": "22.3.0",
     "solc": "0.5.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.7",
